--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,8 @@ function popupOnClick(e) {
     function createTag(title, alt, name, color) {
       let span = document.createElement('a');
       span.textContent = title;
-      if (alt) span.title = alt;
+      span.title = title;
+      //if (alt) span.title = alt;
       span.className = 'tag-item';
       span.setAttribute('alt', alt);
       span.onclick = function(e) { copyToClipboard(  `${e.target.getAttribute('alt')}`  )  };
