--- a/index.html
+++ b/index.html
@@ -1068,9 +1068,11 @@ function popupOnClick(e) {
 
   let content =  '';
 
+  /* // too tall
   if (info.upgrade) {
     content += `<hr/>${info.upgrade}`;
   }
+  */
 
   if (o.keycode) {
     content += `<hr/>Keycode: ${o.keycode}`;
