--- a/index.html
+++ b/index.html
@@ -1722,7 +1722,7 @@ function passesFilter(marker) {
     info.upgrade,
     info.description,
     info.quest,
-    info.location,
+    //info.location, // maybe don't do location, too many matches
 
     ...tags].map(x=>x||'').join(' ').toLowerCase();
 
