--- a/index.html
+++ b/index.html
@@ -1879,3 +1879,6 @@ window.onload = function(event) {
 
 </body>
 </html>
+
+<script src="//cdn.jsdelivr.net/npm/eruda"></script> <script>eruda.init();</script>
+
