--- a/index.html
+++ b/index.html
@@ -1880,5 +1880,5 @@ window.onload = function(event) {
 </body>
 </html>
 
-<script src="//cdn.jsdelivr.net/npm/eruda"></script> <script>eruda.init();</script>
+<script src="https://cdn.jsdelivr.net/npm/eruda"></script><script>eruda.init();</script>
 
