--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@ function setMarkerSize(marker, size) {
 }
 
 function popupOnClick(e) {
-  console.log('clicked', e.target.feature);
+  //console.log('clicked', e.target.feature);
 
   hideTooltipExt(e);
 
