--- a/index.html
+++ b/index.html
@@ -664,15 +664,16 @@ function clearSelection() {
   }
 }
 
-function translate_item(name) {
+function translate_item(name, verbose=false) {
   name = name.replace('Antirad','AntiRad');
   let title = lang[`sid_items_${name}_name`];
   if (!title) {
     let proto = markers.prototypes[name];
     if (proto) {
+      if (verbose) console.log(proto);
       let lsid = proto.lsid;
       if (lsid) {
-        title = lang[`sid_upgrades_${lsid}_name`];
+        title = lang[`sid_upgrades_${lsid}_name`] || lang[`sid_questItemprototypes_${lsid}_name`];
       }
     }
   }
@@ -825,7 +826,7 @@ function renderItem(feature, extended=false) {
   if (o.items) {
     let items = [];
     for (const name of o.items) {
-      items.push(lang[`sid_questItemprototypes_${name}_name`]);
+      items.push(translate_item(name));
     }
     info.items = items;
   }
@@ -908,6 +909,7 @@ function renderItem(feature, extended=false) {
     }
 
     for (name of o.spawns) {
+      let rank = null;
       if (name.includes(':')) {
         [rank, name] = name.split(':');
         if (rank!= matching_rank) continue;
@@ -1089,7 +1091,7 @@ function popupOnClick(e) {
     let container = document.createElement('div');
     container.classList.add('scrollbar','tag-container');
     for (const name of o.items) {
-      let title = lang[`sid_questItemprototypes_${name}_name`] || name;
+      let title = translate_item(name);
       container.appendChild(createTag(0, name, title, name, name));
     }
     div.appendChild(document.createElement('hr'));
@@ -1251,32 +1253,11 @@ function showTooltip(e) {
   if (o.items) {
     content += `<hr/><div class="overflow-container">`;
     for (const name of o.items) {
-      let title = lang[`sid_questItemprototypes_${name}_name`];
-      content += `<span title="${name}">${title || name}</span><br/>`;
+      let title = translate_item(name);
+      content += `<span title="${name}">${title}</span><br/>`;
     }
     content +='</div>';
   }
-
-  /*
-  if (o.spawns) {
-    content += `<hr/><div class="overflow-container small">`;
-    for (name of o.spawns) {
-      content += `<div>${name}</div>`;
-    }
-    content +='</div>';
-  }
-  */
-  
-  /*
-  if (o.references) {
-    content += `<hr/><div class="overflow-container small">`;
-    for (const name of o.references) {
-      let title = lang[`sid_questItemprototypes_${name}_name`];
-      content += `<a href="#${name}" onclick="copyToClipboard('XStartQuestNodeBySID ${name}')" title="${name}">${name}</a><br/>`;
-    }
-    content +='</div>';
-  }
-  */
 
   if (info.upgrade) {
     content += `<hr/>${info.upgrade}`;
