--- a/index.html
+++ b/index.html
@@ -939,10 +939,10 @@ function renderItem(feature, extended=false) {
             if (s) items.push(s);
           }
           let items_str = items.join(', ');
-          info.upgrade = `<b>${title}</b><br/>${items_str}`;
+          info.upgrade = `<b>${title}</b><div class="small">${items_str}</div>`;
         }
         if (desc) {
-          info.upgrade = (info.upgrade||'') + `<hr/>${desc}`;
+          info.upgrade = (info.upgrade||'') + `${desc}`;
         }
       }
     }
