--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ function loadMap() {
     },
 
     //seamlessZoom: true,
-    doubleClickZoom: true,
+    doubleClickZoom: false,
 
     //maxExtent: extent,
 
