--- a/index.html
+++ b/index.html
@@ -1292,7 +1292,7 @@ function showTooltip(e) {
 
   if (o.references) {
     let signals = o.references.join('\n');
-    content += `<hr><div title="${signals}"><i class="fa-solid fa-bolt"></i> ${o.references.length}</div>`;
+    content += `<hr><div title="${signals}"><i class="fa-solid fa-code-commit"></i> ${o.references.length}</div>`;
   }
 
   tooltip.innerHTML = content;
